workspaces/optic-engine/src/queries/snapshots/optic_engine__queries__shape__test__can_resolve_shape_trails__field_trail.snap
---
source: workspaces/optic-engine/src/queries/shape.rs
expression: "&field_trail"
---
Some(
    ShapeTrail {
        root_shape_id: "object_shape_1",
        path: [
            ObjectFieldTrail {
                field_id: "field_1",
                field_shape_id: "optional_shape_1",
                parent_object_shape_id: "object_shape_1",
            },
        ],
    },
)
