workspaces/optic-engine/src/queries/snapshots/optic_engine__queries__shape__test__can_resolve_shape_trails__nested_field_trail.snap
---
source: workspaces/optic-engine/src/queries/shape.rs
expression: "&nested_field_trail"
---
Some(
    ShapeTrail {
        root_shape_id: "object_shape_1",
        path: [
            ObjectTrail {
                shape_id: "object_shape_1",
            },
            ObjectFieldTrail {
                field_id: "field_4",
                field_shape_id: "object_shape_2",
                parent_object_shape_id: "object_shape_1",
            },
            ObjectTrail {
                shape_id: "object_shape_2",
            },
            ObjectFieldTrail {
                field_id: "field_3",
                field_shape_id: "boolean_shape_1",
                parent_object_shape_id: "object_shape_2",
            },
        ],
    },
)
