workspaces/optic-engine/src/queries/snapshots/optic_engine__queries__shape__test__can_resolve_shape_trails__unknown_nullable_trail.snap
---
source: workspaces/optic-engine/src/queries/shape.rs
expression: "&unknown_nullable_trail"
---
Some(
    ShapeTrail {
        root_shape_id: "object_shape_1",
        path: [
            ObjectTrail {
                shape_id: "object_shape_1",
            },
            ObjectFieldTrail {
                field_id: "field_6",
                field_shape_id: "nullable_shape_2",
                parent_object_shape_id: "object_shape_1",
            },
        ],
    },
)
